force-app/main/default/objects/Campaign/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <label>Campaign Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email Blast</fullName>
            </value>
            <value>
                <fullName>Roadshow</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>1:1 Meetings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>