force-app/main/default/objects/Campaign/fields/Investment_Round__c.field-meta.xml
<CustomField>
    <fullName>Investment_Round__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investment Round</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>