force-app/main/default/objects/Campaign/fields/Meeting_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Conversion_Rate__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Conversion Rate</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>