force-app/main/default/objects/Campaign/fields/Response_Rate__c.field-meta.xml
<CustomField>
    <fullName>Response_Rate__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Rate</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>