force-app/main/default/objects/Campaign/fields/Target_Investor_Tier__c.field-meta.xml
<CustomField>
    <fullName>Target_Investor_Tier__c</fullName>
    <label>Target Investor Tier</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>